--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -20,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "morgan": "^1.10.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
