--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "realtime-chat-app": "file:..",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
