--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "build-render": "npm ci --prefix backend && npm ci --prefix frontend && npm run build --prefix frontend",
+    "build-render": "npm ci backend && npm ci npm ci --include=dev frontend && npm run build ci frontend",
     "start": "npm run start --prefix backend"
   },
   "keywords": [],
